Renamed the utils methods, Java Doc in service layer reformating and added comments for service layer tests.